Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-260

Filtering in remap.config is broken

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 2.1.0, 2.0.0
    • Core
    • None

    Description

      The ACL filtering in remap (@src_ip @method @action parameters) doesn't work.

      It looks like the implementation was completely removed during code cleanup. It should be re-introduced, with removal of the Yahoo-specific code.

      Attachments

        1. TS-260_sjiang.diff
          3 kB
          Steve Jiang

        Activity

          People

            sjiang Steve Jiang
            sjiang Steve Jiang
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: