TS-260: fix acls in remap.config

Merged from trunk


git-svn-id: https://svn.apache.org/repos/asf/incubator/trafficserver/traffic/branches/2.0.x@930485 13f79535-47bb-0310-9956-ffa450edef68